# haptic-wheel

./: .gitignore  README.md  current_generator_sim.m  volume_knob.wara
HID Volume Sync Service/: HID Volume Sync Service.csproj  HID Volume Sync Service.sln  Program.cs  packages.config
HID Volume Sync Service/Properties/: AssemblyInfo.cs
SaleaeParser/: SaleaeParser.sln
SimpleFOC_tests/closed_loop_angle/: closed_loop_angle.ino
SimpleFOC_tests/closed_loop_torque/: closed_loop_torque.ino
SimpleFOC_tests/open_loop_position_example/: open_loop_position_example.ino
angle_detents/: angle_detents.ino
cad/: Enclosure.3MF  Final Knob.3MF  Lid.3MF  Wheel Face.3MF
captured data/: spi_capture.csv  spi_capture_processed.txt  spi_capture_small.csv
closed_loop_angle/: closed_loop_angle.ino
closed_loop_torque/: closed_loop_torque.ino
closed_loop_velocity/: closed_loop_velocity.ino
driver_test/: driver_test.ino
haptic-volume-knob-arduino/: haptic-volume-knob-arduino.adeps  haptic-volume-knob-arduino.sln  haptic-volume-knob-arduino.vgdbproj
haptic-volume-knob/haptic-volume-knob/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
hid-volume-sync-test/: Program.cs  hid-volume-sync-test.csproj  hid-volume-sync-test.sln
hid-volume-sync-test-netframework/: Program.cs  hid-volume-sync-test-netframework.csproj  packages.config
magnetic_sensor_spi_example/: magnetic_sensor_spi_example.ino
open_loop_position_example/: open_loop_position_example.ino
open_loop_velocity_example/: open_loop_velocity_example.ino  velocity_0_capture.sal
s3_working/: s3_working.ino
(+12 files in other folders)
